fix(styles): set default text color to black for better readability

--- a/src/app/main-content/input-message/input-message.component.scss
+++ b/src/app/main-content/input-message/input-message.component.scss
@@ -134,6 +134,7 @@ mat-label {
     flex-direction: column;
     gap: 10px;
     max-height: 370px;
+    color: black;
 
     &::-webkit-scrollbar {
         width: 6px;
