--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,7 @@ h6,
 p,
 span {
     margin: 0;
+    color: black;
 }
 
 body {
